[metadata]
name = actions
version = 2022.2.22
description = Only for testing purpose
author = Omina Technologies
author_email = info@ominatechnologies.com
description_file = file: README.rst
long_description = file: README.rst
long_description_content_type = text/reStructuredText
license = UNLICENSED
license_file = LICENSE
url = https://github.com/ominatechnologies/actions
classifiers =
    Programming Language :: Python :: 3
keywords =
    ci
    github actions

[options]
zip_safe = false
package_dir=
    =src
packages = find:
python_requires = >= 3.8.7
setup_requires =
    setuptools >=46.4.0
    wheel >= 0.36.2
install_requires =
    requests

[options.packages.find]
where = src

[bdist_wheel]
universal = true

[flake8]
# Disabling escaping quotes
avoid-escape = False
exclude =
    .git
    .eggs
    .*_cache
    *.egg-info
    venv
    build
    dist
    docs
    results
    data
extend-ignore = E203
inline-quotes = double
max-line-length = 88

[mypy]
allow_untyped_globals = False
color_output = True
error_summary = True
pretty = True
python_version = 3.8
show_absolute_path = True
show_column_numbers = True
show_error_codes = True
show_error_context = True
show_none_errors = True
show_traceback = True
verbosity = 0
warn_no_return = True
warn_redundant_casts = True
;warn_return_any = True
;warn_unreachable = True
warn_unused_ignores = True

[tool:pytest]
addopts =
    -ra -s
    --color=yes
    --doctest-modules
    --maxfail=1
    --verbosity=1
;    --showlocals
junit_family = xunit1
markers =
    slow: Mark a test as slow
norecursedirs =
    .git
    .eggs
    .*_cache
    *.egg-info
    build
    dist
python_files = test_*.py
testpaths =
    tests

[bumpver]
current_version = 2022.2.22
version_pattern = YYYY.MM.DD[.INC0]
commit_message = chore: Release {new_version}
commit = True
tag = False
push = False

[bumpver:file_patterns]
setup.cfg =
    current_version = {version}
    version = {version}
